--- a/views/initChoose.ejs
+++ b/views/initChoose.ejs
@@ -97,7 +97,7 @@
     <a href="/"><button id="goNext"class="button2">Go to Search page </button></a>
   </div>
   
-  <div class="container-fluid">
+  <div class="container-fluid" >
     <div class="row">
       <% var x = 0; %>
         <% movies.forEach(function(movie1){%>
@@ -106,11 +106,11 @@
               <div class="panel-heading" align="center">
                 <%= movie1.title%>
               </div>
-              <div class="panel-body" align="center">
+              <div class="panel-body" align="center" >
                 <% if (movie1.title == "Frost/Nixon") { %>
                   <form method='post' action="/initChoose">
                     <input class="all" onclick="enableClick(id)" name="like" id="<%= x %>" value="1 <%= movie1.title %>" type="image" height="320"
-                      width="220" src='http://git.mobile-os.com/mos/Neo4jVisualization/raw/v0.0.002/public/images/Frost:Nixon.jpg'
+                      width="220" src='https://github.com/folowpig/Neo4j-Movie-Recommendation/blob/master/images/Frost:Nixon.jpg?raw=true'
                     />
                   </form>
                   <form method='post' action="/initChoose">
@@ -119,7 +119,7 @@
                   <% } else { %>
                     <form method='post' action="/initChoose">
                       <input class="all" onclick="enableClick(id)" name="like" id="<%= x %>" value="1 <%= movie1.title %>" type="image" height="320"
-                        width="220" src='http://git.mobile-os.com/mos/Neo4jVisualization/raw/v0.0.002/public/images/<%= movie1.title %>.jpg'
+                        width="220" src='https://github.com/folowpig/Neo4j-Movie-Recommendation/blob/master/images/<%= movie1.title %>.jpg?raw=true'
                       />
                     </form>
                     <form method='post' action="/initChoose">
