--- a/views/main.ejs
+++ b/views/main.ejs
@@ -108,9 +108,9 @@
                   </td>
                   <td>
                     <% if (movie.title == "Frost/Nixon") { %>
-                      <img height="120" width="80" src='http://git.mobile-os.com/mos/Neo4jVisualization/raw/v0.0.002/public/images/Frost:Nixon.jpg'>
+                      <img height="120" width="80" src='https://github.com/folowpig/Neo4j-Movie-Recommendation/blob/master/images/Frost:Nixon.jpg?raw=true'>
                     <% } else { %>
-                      <img height="120" width="80" src='http://git.mobile-os.com/mos/Neo4jVisualization/raw/v0.0.002/public/images/<%= movie.title %>.jpg'>
+                      <img height="120" width="80" src='https://github.com/folowpig/Neo4j-Movie-Recommendation/blob/master/images/<%= movie.title %>.jpg?raw=true'>
                     <% } %>
                   </td>
                   <td>
