--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -37,14 +37,16 @@
           <h3>
             <span class="fa fa-user"></span> Local</h3>
             <p>
+            <% if(user.profileid == null) { %>
               <strong>id</strong>:
-              <%= user._id %>
+              <%= user.id %>
                 <br>
                 <strong>email</strong>:
-                <%= user.local.email %>
+                <%= user.email %>
                   <br>
                   <strong>password</strong>:
-                  <%= user.local.password %>
+                  <%= user.password %>
+            <% } %>
             </p>
         </div>
       </div>
@@ -54,17 +56,19 @@
           <h3 class="text-danger">
             <span class="fa fa-google-plus"></span> Google</h3>
             <p>
+            <% if(user.profileid != null) { %>
               <strong>id</strong>:
-              <%= user.google.id %>
+              <%= user.id %>
                 <br>
-                <strong>token</strong>:
-                <%= user.google.token %>
+                <strong>profile ID</strong>:
+                <%= user.profileid %>
                   <br>
-                  <strong>email</strong>:
-                  <%= user.google.email %>
+                  <strong>token</strong>:
+                  <%= user.token %>
                     <br>
-                    <strong>name</strong>:
-                    <%= user.google.name %>
+                    <strong>email</strong>:
+                    <%= user.email %>
+            <% } %>
             </p>
         </div>
       </div>
