--- a/views/main.ejs
+++ b/views/main.ejs
@@ -164,9 +164,9 @@
                   </td>
                   <td>
                     <% if (movie.title == "Frost/Nixon") { %>
-                      <img height="120" width="80" src='http://git.mobile-os.com/mos/Neo4jVisualization/raw/v0.0.002/public/images/Frost:Nixon.jpg'>
+                      <img height="120" width="80" src='/images/Frost:Nixon.jpg'>
                     <% } else { %>
-                      <img height="120" width="80" src='http://git.mobile-os.com/mos/Neo4jVisualization/raw/v0.0.002/public/images/<%= movie.title %>.jpg'>
+                      <img height="120" width="80" src='/images/<%= movie.title %>.jpg'>
                     <% } %>
                   <td>
                     <%= movie.tagline %>
